--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 </head>
 
 <body>
-	<img src="images/photo.png" alt="huzaifa profile pic">
+	<img src="photo.png" alt="huzaifa profile pic">
 	<h1>Huzaifa Shaik</h1>
 	<p><em>I am a <strong>Student</strong>.</em></p>
 	<p>I Am a Webdeveloper and I Love TEA .</p>
